# handsonml

./: pyproject.toml
src/jupyter_book/: chapter3.ipynb
src/jupyter_book/.ipynb_checkpoints/: chapter3-checkpoint.ipynb
